{
  "version": 4,
  "terraform_version": "1.10.3",
  "serial": 63,
  "lineage": "e04a3a72-254a-a8b3-77fc-6e87b13f3716",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "go_nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e9c2940149a30a27",
            "arn": "arn:aws:ec2:us-east-1:778876534404:elastic-ip/eipalloc-0e9c2940149a30a27",
            "association_id": "eipassoc-0daa9eccd868232fc",
            "domain": "vpc",
            "id": "eipalloc-0e9c2940149a30a27",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0b6563e6551ea7671",
            "private_dns": "ip-25-1-0-188.ec2.internal",
            "private_ip": "25.1.0.188",
            "public_dns": "ec2-44-209-198-18.compute-1.amazonaws.com",
            "public_ip": "44.209.198.18",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "go_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:778876534404:internet-gateway/igw-0f0726825e92bf8e2",
            "id": "igw-0f0726825e92bf8e2",
            "owner_id": "778876534404",
            "tags": {
              "Name": "go-igw"
            },
            "tags_all": {
              "Name": "go-igw"
            },
            "vpc_id": "vpc-0dd798aebb9787fac"
          },
          "dependencies": [
            "aws_vpc.go_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "go_nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e9c2940149a30a27",
            "association_id": "eipassoc-0daa9eccd868232fc",
            "connectivity_type": "public",
            "id": "nat-012964751d0b30f49",
            "network_interface_id": "eni-0b6563e6551ea7671",
            "private_ip": "25.1.0.188",
            "public_ip": "44.209.198.18",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-059f55417636578ea",
            "tags": {
              "Name": "go-nat"
            },
            "tags_all": {
              "Name": "go-nat"
            }
          },
          "dependencies": [
            "aws_eip.go_nat_eip",
            "aws_subnet.go_public_a",
            "aws_vpc.go_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "go_private_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:778876534404:route-table/rtb-00886e97955f60cca",
            "id": "rtb-00886e97955f60cca",
            "owner_id": "778876534404",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-012964751d0b30f49",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "go-private"
            },
            "tags_all": {
              "Name": "go-private"
            },
            "timeouts": null,
            "vpc_id": "vpc-0dd798aebb9787fac"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.go_nat_eip",
            "aws_nat_gateway.go_nat",
            "aws_subnet.go_public_a",
            "aws_vpc.go_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "go_public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:778876534404:route-table/rtb-00a0148bf246e2528",
            "id": "rtb-00a0148bf246e2528",
            "owner_id": "778876534404",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0f0726825e92bf8e2",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "go-public"
            },
            "tags_all": {
              "Name": "go-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-0dd798aebb9787fac"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.go_igw",
            "aws_vpc.go_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "go_private_assoc_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05ebc55f1b17e56eb",
            "route_table_id": "rtb-00886e97955f60cca",
            "subnet_id": "subnet-09014f7731ba2ffae"
          },
          "dependencies": [
            "aws_eip.go_nat_eip",
            "aws_nat_gateway.go_nat",
            "aws_route_table.go_private_rt",
            "aws_subnet.go_private_a",
            "aws_subnet.go_public_a",
            "aws_vpc.go_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "go_private_assoc_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0cfe2b56dac697ff2",
            "route_table_id": "rtb-00886e97955f60cca",
            "subnet_id": "subnet-008da9e58070e49f7"
          },
          "dependencies": [
            "aws_eip.go_nat_eip",
            "aws_nat_gateway.go_nat",
            "aws_route_table.go_private_rt",
            "aws_subnet.go_private_b",
            "aws_subnet.go_public_a",
            "aws_vpc.go_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "go_public_assoc_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08e7db7515dc31343",
            "route_table_id": "rtb-00a0148bf246e2528",
            "subnet_id": "subnet-059f55417636578ea"
          },
          "dependencies": [
            "aws_internet_gateway.go_igw",
            "aws_route_table.go_public_rt",
            "aws_subnet.go_public_a",
            "aws_vpc.go_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "go_public_assoc_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06cbed43c6e59468e",
            "route_table_id": "rtb-00a0148bf246e2528",
            "subnet_id": "subnet-058129288cfcee019"
          },
          "dependencies": [
            "aws_internet_gateway.go_igw",
            "aws_route_table.go_public_rt",
            "aws_subnet.go_public_b",
            "aws_vpc.go_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "go_sg_app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:778876534404:security-group/sg-0724b2acbc1179bc1",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0724b2acbc1179bc1",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "go-sg",
            "name_prefix": "",
            "owner_id": "778876534404",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "go-sg-apps"
            },
            "tags_all": {
              "Name": "go-sg-apps"
            },
            "timeouts": null,
            "vpc_id": "vpc-0dd798aebb9787fac"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.go_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "go_private_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:778876534404:subnet/subnet-09014f7731ba2ffae",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "25.1.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09014f7731ba2ffae",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "778876534404",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "go-private-subnet-a"
            },
            "tags_all": {
              "Name": "go-private-subnet-a"
            },
            "vpc_id": "vpc-0dd798aebb9787fac"
          },
          "dependencies": [
            "aws_vpc.go_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "go_private_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:778876534404:subnet/subnet-008da9e58070e49f7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "25.1.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-008da9e58070e49f7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "778876534404",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "go-private-subnet-b"
            },
            "tags_all": {
              "Name": "go-private-subnet-b"
            },
            "vpc_id": "vpc-0dd798aebb9787fac"
          },
          "dependencies": [
            "aws_vpc.go_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "go_public_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:778876534404:subnet/subnet-059f55417636578ea",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "25.1.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-059f55417636578ea",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "778876534404",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "go-public-subnet-a"
            },
            "tags_all": {
              "Name": "go-public-subnet-a"
            },
            "vpc_id": "vpc-0dd798aebb9787fac"
          },
          "dependencies": [
            "aws_vpc.go_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "go_public_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:778876534404:subnet/subnet-058129288cfcee019",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "25.1.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-058129288cfcee019",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "778876534404",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "go-public-subnet-b"
            },
            "tags_all": {
              "Name": "go-public-subnet-b"
            },
            "vpc_id": "vpc-0dd798aebb9787fac"
          },
          "dependencies": [
            "aws_vpc.go_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "go_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:778876534404:vpc/vpc-0dd798aebb9787fac",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "25.1.0.0/16",
            "default_network_acl_id": "acl-043f4af9fcad1e975",
            "default_route_table_id": "rtb-04fe20637d42cfade",
            "default_security_group_id": "sg-09c13b1aa6db2d91a",
            "dhcp_options_id": "dopt-00554c577fc0df788",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0dd798aebb9787fac",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-04fe20637d42cfade",
            "owner_id": "778876534404",
            "tags": {
              "Name": "go-imannuel"
            },
            "tags_all": {
              "Name": "go-imannuel"
            }
          }
        }
      ]
    }
  ]
}